style fix to handle URL bar on mobile more intuitively

--- a/public/style.css
+++ b/public/style.css
@@ -1,5 +1,8 @@
 :root {
   --primary: #495373;
+  position: fixed;
+  width: 100vw;
+  height: 100vh;
 }
 
 :link {
